Changed security and rest for cors